--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="search">Tìm Kiếm</string>
     <string name="detail_part">Chọn Công Tác Con</string>
     <string name="select_part">Chọn Nhóm Công Tác</string>
+    <string name="select_part_sub">Chọn Công Tác Cháu</string>
     <string name="camera_permission_error">Camera Permission Error</string>
 
 
@@ -21,5 +22,6 @@
     <string name="price">Giá:</string>
     <string name="close">Đóng</string>
     <string name="detail_specification">Chi Tiết Phụ Tùng</string>
+    <string name="vnd">VND</string>
 
 </resources>
